[gd_scene load_steps=13 format=3 uid="uid://b3b244jv3ioaj"]

[ext_resource type="Script" uid="uid://dwo4s3x4kucbe" path="res://scn/mobs/enemy.gd" id="1_8q0bw"]
[ext_resource type="AudioStream" uid="uid://ca3sdycj6io8p" path="res://assets/sound/SFX/mushroom/Dirt Chain Run 1.wav" id="3_iuhtd"]
[ext_resource type="AudioStream" uid="uid://ckk3cefxobee6" path="res://assets/sound/SFX/mushroom/Dirt Chain Run 2.wav" id="4_avu8v"]
[ext_resource type="AudioStream" uid="uid://bik75g4xjo1xp" path="res://assets/sound/SFX/mushroom/Dirt Chain Run 3.wav" id="5_7lnoj"]
[ext_resource type="AudioStream" uid="uid://dcfs2tgl08frl" path="res://assets/sound/SFX/mushroom/Dirt Chain Run 4.wav" id="6_5fbi7"]
[ext_resource type="AudioStream" uid="uid://b06lndr2j8x2q" path="res://assets/sound/SFX/mushroom/Dirt Chain Run 5.wav" id="7_r50mb"]
[ext_resource type="Script" uid="uid://ber6wi1p18d4r" path="res://scn/DamageBox/damage_box.gd" id="7_w57cd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d1kao"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4uj2h"]
size = Vector2(15, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_yfo0v"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d5str"]
radius = 9.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cska1"]
streams_count = 5
stream_0/stream = ExtResource("3_iuhtd")
stream_1/stream = ExtResource("4_avu8v")
stream_2/stream = ExtResource("5_7lnoj")
stream_3/stream = ExtResource("6_5fbi7")
stream_4/stream = ExtResource("7_r50mb")

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_8q0bw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_d1kao")

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(16.5, -1)
shape = SubResource("RectangleShape2D_4uj2h")

[node name="DamageBox" type="Node2D" parent="AttackDirection"]
position = Vector2(0, -11)
script = ExtResource("7_w57cd")

[node name="HurtBox" type="Area2D" parent="AttackDirection/DamageBox"]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox"]
position = Vector2(1, 11)
shape = SubResource("CircleShape2D_yfo0v")

[node name="HitBox" type="Area2D" parent="AttackDirection/DamageBox"]
position = Vector2(-5, 11)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox"]
position = Vector2(22, 0)
shape = SubResource("CircleShape2D_d5str")
disabled = true

[node name="Run" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="EnemySound" type="Node2D" parent="."]

[node name="Run" type="AudioStreamPlayer2D" parent="EnemySound"]
stream = SubResource("AudioStreamRandomizer_cska1")
volume_db = -20.0

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Run" to="." method="_on_run_timeout"]
